--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "firebase": "^11.6.0",
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "next-pwa": "^5.6.0",
